--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,26 +1,11 @@
-@media screen and (min-width: 992px) {
-  .how-it-works {
-    display: flex;
-    flex: row wrap;
-    width: 100%;
-  }
-  .restaurants {
-    display: flex;
-    flex-direction: row;
-  }
-  .icon-circle {
-    position: relative;
-    left: 50px;
-  }
-}
-header {
+.logo {
   font-family: "Shrikhand", serif;
   display: flex;
   justify-content: center;
   padding: 20px;
+  box-shadow: 0px 10px rgba(0, 0, 0, 0.2);
 }
-
-header img {
+.logo__image {
   width: 200px;
 }
 
@@ -66,20 +51,24 @@ header img {
   border-style: none;
   padding: 10px 0px 30px 0px;
 }
+.explore__title {
+  font-size: 26px;
+}
+.explore__text {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 100;
+}
 
 .explore button {
   padding: 15px;
   width: 218px;
   height: 50px;
-  border-radius: 20px;
+  border-radius: 70px;
   border-style: none;
   background-image: linear-gradient(#FF79DA, #9356DC);
   color: white;
-}
-
-.explore p {
-  text-align: center;
-  font-weight: 100;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
 /* HOW IT WORKS */
@@ -117,10 +106,11 @@ ol > li {
 .icon-circle {
   color: white;
   background-color: #9356DC;
-  position: absolute;
-  left: 0;
-  padding: 10px;
-  border-radius: 60px;
+  position: relative;
+  width: 0.5rem;
+  height: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 50%;
   border-style: solid;
 }
 
@@ -158,20 +148,12 @@ ol > .how-it-works {
   align-items: center;
 }
 
-.card img {
-  width: 100%;
-  height: 150px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  object-fit: cover;
-}
-
 .card {
   display: block;
   padding-top: 0;
   background-color: white;
   border-radius: 20px;
-  /* filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1)); */
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   width: 300px;
   height: 225px;
   text-decoration: none;
@@ -179,19 +161,25 @@ ol > .how-it-works {
   flex: 1;
   position: relative;
 }
-
-.card-content {
+.card__image {
+  width: 100%;
+  height: 150px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  object-fit: cover;
+}
+.card__image__body {
   display: flex;
   flex-direction: column;
   margin: 15px;
 }
 
-.card-content h3 {
-  margin: 0;
+.card__body h3 {
+  margin: 10px 15px;
 }
 
-.card-content p {
-  margin: 0;
+.card__body p {
+  margin: 0px 10px 15px 15px;
   font-weight: 100;
 }
 
@@ -200,15 +188,10 @@ ol > .how-it-works {
   right: 0;
   bottom: 25px;
   padding-right: 15px;
-  background-image: linear-gradient(#FF79DA, #9356DC);
 }
-
-.full-heart {
-  position: absolute;
-  right: 0;
-  bottom: 25px;
-  padding-right: 15px;
-  color: linear-gradient(#9356DC, #FF79DA);
+.heart--full {
+  padding-left: 15px;
+  color: linear-gradient(#FF79DA, #9356DC);
 }
 
 .new {
@@ -243,6 +226,7 @@ footer ul {
   display: flex;
   flex-direction: column;
   margin: 0;
+  margin-bottom: 20px;
 }
 
 footer li {
@@ -252,6 +236,22 @@ footer li {
   line-height: 4px;
   gap: 10px;
   margin: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .how-it-works {
+    display: flex;
+    flex: row wrap;
+    width: 100%;
+  }
+  .restaurants {
+    display: flex;
+    flex-direction: row;
+  }
+  .icon-circle {
+    position: relative;
+    left: 50px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
