--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -18,6 +18,10 @@ footer ul {
     flex-direction: column;
     margin: 0;
     margin-bottom: 20px;
+
+    @mixin desktop-only {
+        flex-direction: row;
+    }
 }
 
 footer li {
@@ -27,4 +31,8 @@ footer li {
     line-height: 4px;
     gap: 10px;
     margin: 0;
+
+    @mixin desktop-only {
+        flex-direction: row;
+    }
 }
