--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -59,10 +59,11 @@ ol {
     flex-direction: column;
     padding: 0;
 
-    @mixin desktop-only {
+    @include desktop-only {
         display: flex;
         flex-direction: row;
         padding: 20px;
+        gap: 40px;
     }
 }
 
@@ -79,12 +80,6 @@ ol>li {
     height: 60px;
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
-
-    @mixin desktop-only {
-        display: flex;
-        flex-direction: row;
-        padding: 20px;
-    }
 }
 
 .icon {
@@ -119,12 +114,6 @@ ol>.how-it-works {
     color: #F6F6F6;
     background-color: $main-color;
     border-radius: 30%;
-
-    @mixin desktop-only {
-        display: flex;
-        flex-direction: row;
-        padding: 20px;
-    }
 }
 
 /* RESTAURANT CARDS */
@@ -133,11 +122,6 @@ ol>.how-it-works {
     background-color: #F6F6F6;
     padding-top: 30px;
     margin-top: 70px;
-
-    @include desktop-only {
-        display: flex;
-        flex-direction: row;
-    }
 }
 
 .restaurants h2 {
@@ -152,6 +136,12 @@ ol>.how-it-works {
     padding-bottom: 30px;
     gap: 15px;
     align-items: center;
+
+    @include desktop-only {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
 }
 
 .card {
