--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -11,6 +11,12 @@ footer h2 {
     margin-left: 40px;
     line-height: 15px;
     padding-top: 15px;
+
+    @include desktop-only {
+        position: absolute;
+        right: 25px;
+        padding: 50px;
+    }
 }
 
 footer ul {
@@ -19,8 +25,10 @@ footer ul {
     margin: 0;
     margin-bottom: 20px;
 
-    @mixin desktop-only {
+    @include desktop-only {
         flex-direction: row;
+        margin-top: 60px;
+        padding-left: 400px;
     }
 }
 
@@ -32,7 +40,8 @@ footer li {
     gap: 10px;
     margin: 0;
 
-    @mixin desktop-only {
-        flex-direction: row;
+    @include desktop-only {
+        gap: 10px;
+        padding-right: 20px;
     }
 }
