--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,13 +1,12 @@
+body {
+  margin: 0;
+}
+
 * {
   font-family: "Roboto", sans-serif;
   font-style: normal;
 }
 
-/* .roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  } */
 .explore-button {
   padding: 15px 25px;
   border-radius: 70px;
@@ -91,7 +90,12 @@ footer li {
   justify-content: center;
   border-style: none;
   gap: 15px;
-  box-shadow: 0px -3px 3px 0px #ccc;
+  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4);
+}
+@media screen and (min-width: 992px) {
+  .location {
+    box-shadow: none;
+  }
 }
 
 .dot {
@@ -129,24 +133,30 @@ h1 {
 
 /* HOW IT WORKS */
 .how-it-works {
-  margin: 50px 10px;
+  margin: 30px 10px;
 }
 .how-it-works__title {
   display: flex;
   flex-direction: column;
+}
+@media screen and (min-width: 992px) {
+  .how-it-works__title {
+    margin-left: 100px;
+  }
 }
 
 ol {
   display: flex;
   flex-direction: column;
   padding: 0;
+  margin-left: 15px;
 }
 @media screen and (min-width: 992px) {
   ol {
     display: flex;
     flex-direction: row;
-    padding: 20px;
     gap: 40px;
+    margin-left: 100px;
   }
 }
 
@@ -204,6 +214,14 @@ ol > .how-it-works {
   background-color: #F6F6F6;
   padding-top: 30px;
   margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 992px) {
+  .restaurants {
+    box-sizing: border-box;
+    padding-left: 100px;
+  }
 }
 
 .restaurants h2 {
@@ -215,15 +233,14 @@ ol > .how-it-works {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   padding-bottom: 30px;
   gap: 15px;
-  align-items: center;
 }
 @media screen and (min-width: 992px) {
   .cards {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+    flex-flow: row wrap;
+    justify-content: space-between;
   }
 }
 
@@ -237,8 +254,12 @@ ol > .how-it-works {
   height: 225px;
   text-decoration: none;
   color: #353535;
-  flex: 1;
   position: relative;
+}
+@media screen and (min-width: 992px) {
+  .card {
+    width: 500px;
+  }
 }
 .card__image {
   width: 100%;
@@ -251,6 +272,11 @@ ol > .how-it-works {
   display: flex;
   flex-direction: column;
   margin: 15px;
+}
+@media screen and (min-width: 992px) {
+  .card__image__body {
+    width: fit-content;
+  }
 }
 
 .card__body h3 {
@@ -265,10 +291,12 @@ ol > .how-it-works {
 .heart {
   position: absolute;
   width: 60px;
-  height: 60px;
-  right: 30px;
+  height: 20px;
+  right: -30px;
   bottom: 40px;
   padding-right: 15px;
+  font-size: 24px;
+  border-width: 1px;
 }
 .heart__empty {
   position: absolute;
@@ -285,19 +313,15 @@ ol > .how-it-works {
   -webkit-background-clip: text;
   color: transparent;
   opacity: 0;
+  transition: opacity 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 }
-
-.heart:hover + .heart__full {
-  transform: scaleX(2);
+.heart__full:hover {
   opacity: 1;
-}
-
-.heart__full {
-  transition: transform 2000ms ease-in;
 }
 
 .new {
   position: absolute;
+  text-align: center;
   left: 200px;
   bottom: 155px;
   width: 40px;
@@ -306,6 +330,11 @@ ol > .how-it-works {
   border-radius: 2px;
   background-color: #99E2D0;
   color: green;
+}
+@media screen and (min-width: 992px) {
+  .new {
+    left: 400px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
