--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,7 +6,11 @@
     justify-content: center;
     border-style: none;
     gap: 15px;
-    box-shadow: 0px -3px 3px 0px #ccc;
+    box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4);
+
+    @include desktop-only {
+        box-shadow: none;
+    }
 }
 
 .dot {
@@ -24,7 +28,7 @@ h1 {
 }
 
 .explore {
-    background-color: #F6F6F6;
+    background-color: $background-color;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,11 +50,15 @@ h1 {
 
 /* HOW IT WORKS */
 .how-it-works {
-    margin: 50px 10px;
+    margin: 30px 10px;
 
     &__title {
         display: flex;
         flex-direction: column;
+
+        @include desktop-only {
+            margin-left: 100px;
+        }
     }
 }
 
@@ -58,12 +66,13 @@ ol {
     display: flex;
     flex-direction: column;
     padding: 0;
+    margin-left: 15px;
 
     @include desktop-only {
         display: flex;
         flex-direction: row;
-        padding: 20px;
         gap: 40px;
+        margin-left: 100px;
     }
 }
 
@@ -111,7 +120,7 @@ ol>li {
 ol>.how-it-works {
     display: inline-block;
     padding: 5px;
-    color: #F6F6F6;
+    color: $background-color;
     background-color: $main-color;
     border-radius: 30%;
 }
@@ -119,9 +128,16 @@ ol>.how-it-works {
 /* RESTAURANT CARDS */
 .restaurants {
     width: 100%;
-    background-color: #F6F6F6;
+    background-color: $background-color;
     padding-top: 30px;
     margin-top: 70px;
+    display: flex;
+    flex-direction: column;
+
+    @include desktop-only {
+        box-sizing: border-box;
+        padding-left: 100px;
+    }
 }
 
 .restaurants h2 {
@@ -133,14 +149,13 @@ ol>.how-it-works {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 30px;
     gap: 15px;
-    align-items: center;
 
     @include desktop-only {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
+        flex-flow: row wrap;
+        justify-content: space-between;
     }
 }
 
@@ -154,8 +169,11 @@ ol>.how-it-works {
     height: 225px;
     text-decoration: none;
     color: #353535;
-    flex: 1;
     position: relative;
+
+    @include desktop-only {
+        width: 500px;
+    }
 
     &__image {
         width: 100%;
@@ -168,6 +186,10 @@ ol>.how-it-works {
             display: flex;
             flex-direction: column;
             margin: 15px;
+
+            @include desktop-only {
+                width: fit-content;
+            }
         }
     }
 }
@@ -184,10 +206,12 @@ ol>.how-it-works {
 .heart {
     position: absolute;
     width: 60px;
-    height: 60px;
-    right: 30px;
+    height: 20px;
+    right: -30px;
     bottom: 40px;
     padding-right: 15px;
+    font-size: 24px;
+    border-width: 1px;
 
     &__empty {
         position: absolute;
@@ -205,29 +229,18 @@ ol>.how-it-works {
         -webkit-background-clip: text;
         color: transparent;
         opacity: 0;
+        transition: opacity 500ms cubic-bezier(.17,.67,.83,.67);
 
-        // &:hover {
-        //     opacity: 1;
-        //     transform: scale(2);
-        // }
+        &:hover {
+            opacity: 1;
+        }
     }
-}
-
-
-.heart {
-    &:hover + .heart__full {
-        transform: scaleX(2);
-        opacity: 1;
-    }
-}
-
-.heart__full {
-    transition: transform 2000ms ease-in;
 }
 
 
 .new {
     position: absolute;
+    text-align: center;
     left: 200px;
     bottom: 155px;
     width: 40px;
@@ -236,4 +249,8 @@ ol>.how-it-works {
     border-radius: 2px;
     background-color: $third-color;
     color: green;
+
+    @include desktop-only {
+        left: 400px;
+    }
 }
