--- a/public/styles/pages.css
+++ b/public/styles/pages.css
@@ -21,6 +21,24 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
+.order-button {
+  padding: 15px 25px;
+  border-radius: 70px;
+  border-style: none;
+  text-decoration: none;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 20px;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+}
+.order-button:hover {
+  background-image: linear-gradient(#ff93e1, #a16be0);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
 .logo {
   font-family: "Shrikhand", serif;
   display: flex;
@@ -63,7 +81,7 @@ footer ul {
   footer ul {
     flex-direction: row;
     margin-top: 60px;
-    padding-left: 400px;
+    padding-left: 600px;
   }
 }
 
@@ -80,6 +98,361 @@ footer li {
     gap: 10px;
     padding-right: 20px;
   }
+}
+
+/* LOCATION */
+.location {
+  background-color: #EAEAEA;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-style: none;
+  gap: 15px;
+  box-shadow: inset 0 7px 9px -7px rgba(0, 0, 0, 0.4);
+}
+@media screen and (min-width: 992px) {
+  .location {
+    box-shadow: none;
+  }
+}
+
+.dot {
+  color: #353535;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4%;
+  height: 50px;
+}
+
+/* BOOK YOUR MEAL */
+h1 {
+  font-weight: 1000;
+}
+
+.explore {
+  background-color: #F6F6F6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-style: none;
+  padding: 10px 0px 30px 0px;
+}
+.explore__title {
+  font-size: 26px;
+  font-weight: 500;
+}
+.explore__text {
+  font-size: 20px;
+  text-align: center;
+  font-weight: 100;
+}
+
+/* HOW IT WORKS */
+.how-it-works {
+  margin: 30px 10px;
+}
+.how-it-works__title {
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 992px) {
+  .how-it-works__title {
+    margin-left: 100px;
+  }
+}
+
+ol {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin-left: 15px;
+}
+@media screen and (min-width: 992px) {
+  ol {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+  }
+}
+
+ol > li {
+  display: flex;
+  position: relative;
+  border-radius: 20px;
+  align-items: center;
+  background-color: #F2F2F2;
+  padding: 10px 30px;
+  gap: 30px;
+  width: 250px;
+  height: 60px;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+  color: grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 15px;
+}
+
+.icon-circle {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356DC;
+  position: absolute;
+  left: -15px;
+  width: 0.5rem;
+  height: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 50%;
+}
+
+.icon-color {
+  color: #9356DC;
+}
+
+ol > .how-it-works {
+  display: inline-block;
+  padding: 5px;
+  color: #F6F6F6;
+  background-color: #9356DC;
+  border-radius: 30%;
+}
+
+/* RESTAURANT CARDS */
+.restaurants {
+  width: 100%;
+  background-color: #F6F6F6;
+  padding-top: 30px;
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 992px) {
+  .restaurants {
+    box-sizing: border-box;
+    padding-left: 100px;
+  }
+}
+
+.restaurants h2 {
+  margin-left: 20px;
+}
+
+.cards {
+  margin-top: 33px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 30px;
+  gap: 15px;
+}
+@media screen and (min-width: 992px) {
+  .cards {
+    flex-flow: row wrap;
+    justify-content: center;
+    width: 80%;
+    gap: 50px;
+  }
+}
+
+.card {
+  display: block;
+  padding-top: 0;
+  background-color: white;
+  border-radius: 20px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  width: 300px;
+  height: 225px;
+  text-decoration: none;
+  color: #353535;
+  position: relative;
+}
+@media screen and (min-width: 992px) {
+  .card {
+    width: 500px;
+  }
+}
+.card__image {
+  width: 100%;
+  height: 150px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  object-fit: cover;
+}
+.card__image__body {
+  display: flex;
+  flex-direction: column;
+  margin: 15px;
+}
+@media screen and (min-width: 992px) {
+  .card__image__body {
+    width: fit-content;
+  }
+}
+
+.card__body h3 {
+  margin: 10px 15px;
+}
+
+.card__body p {
+  margin: 0px 10px 15px 15px;
+  font-weight: 100;
+}
+
+.heart {
+  position: absolute;
+  width: 60px;
+  height: 20px;
+  right: -30px;
+  bottom: 40px;
+  padding-right: 15px;
+  font-size: 24px;
+  border-width: 1px;
+}
+.heart__empty {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.heart__full {
+  position: absolute;
+  left: -15px;
+  top: 0;
+  padding-left: 15px;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+.heart__full:hover {
+  opacity: 1;
+}
+
+.new {
+  position: absolute;
+  text-align: center;
+  left: 200px;
+  bottom: 155px;
+  width: 40px;
+  padding: 10px 20px;
+  border-style: none;
+  border-radius: 2px;
+  background-color: #99E2D0;
+  color: green;
+}
+@media screen and (min-width: 992px) {
+  .new {
+    left: 400px;
+  }
+}
+
+.back {
+  position: relative;
+  right: 50px;
+  top: 10px;
+  font-size: 20px;
+}
+
+.corazon {
+  position: absolute;
+  width: 60px;
+  height: 20px;
+  right: 30px;
+  top: 310px;
+  padding-right: 15px;
+  font-size: 24px;
+  border-width: 1px;
+}
+.corazon__empty {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.corazon__full {
+  position: absolute;
+  left: -15px;
+  top: 0;
+  padding-left: 15px;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  opacity: 0;
+  transition: opacity 500ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
+}
+.corazon__full:hover {
+  opacity: 1;
+}
+
+.menu {
+  background-color: #F6F6F6;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+.menu__image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  inset: 4px 8px;
+}
+.menu__title {
+  font-family: "Shrikhand", serif;
+}
+
+.category__title {
+  text-transform: uppercase;
+  font-weight: 200;
+  margin-left: 10px;
+  padding-bottom: 5px;
+  position: relative;
+}
+.category__title:before {
+  content: "";
+  position: absolute;
+  width: 45px;
+  height: 1px;
+  bottom: -5px;
+  border-bottom: 3px solid #99E2D0;
+}
+
+.item {
+  margin-bottom: 20px;
+  display: block;
+  background-color: white;
+  border-radius: 15px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
+  text-decoration: none;
+  color: #353535;
+  position: relative;
+  margin: 10px;
+  padding: 10px;
+  width: 90%;
+}
+.item__title {
+  font-weight: 600;
+}
+.item__content {
+  font-weight: 200;
+}
+.item__price {
+  font-weight: 500;
+  position: absolute;
+  right: 40px;
+  top: 30px;
 }
 
 /*# sourceMappingURL=pages.css.map */
