--- a/public/styles/pages.css
+++ b/public/styles/pages.css
@@ -22,6 +22,7 @@ body {
 }
 
 .order-button {
+  margin: 20px 10px;
   padding: 15px 25px;
   border-radius: 70px;
   border-style: none;
@@ -59,6 +60,7 @@ footer {
 
 footer h2 {
   font-family: "Shrikhand", serif;
+  font-size: 20px;
   margin-left: 40px;
   line-height: 15px;
   padding-top: 15px;
@@ -98,6 +100,12 @@ footer li {
     gap: 10px;
     padding-right: 20px;
   }
+}
+
+.kitchen-icon {
+  height: 16px;
+  width: 10px;
+  padding-right: 5px;
 }
 
 /* LOCATION */
@@ -374,6 +382,11 @@ ol > .how-it-works {
   font-size: 24px;
   border-width: 1px;
 }
+@media screen and (min-width: 992px) {
+  .corazon {
+    right: 300px;
+  }
+}
 .corazon__empty {
   position: absolute;
   left: 0;
@@ -395,6 +408,21 @@ ol > .how-it-works {
   opacity: 1;
 }
 
+@media screen and (min-width: 992px) {
+  .menu-and-blank {
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+  }
+}
+
+.menu__image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  inset: 4px 8px;
+}
+
 .menu {
   background-color: #F6F6F6;
   border-top-left-radius: 30px;
@@ -403,14 +431,28 @@ ol > .how-it-works {
   flex-direction: column;
   padding: 10px;
 }
-.menu__image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  inset: 4px 8px;
+@media screen and (min-width: 992px) {
+  .menu {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+  }
 }
 .menu__title {
   font-family: "Shrikhand", serif;
+}
+@media screen and (min-width: 992px) {
+  .menu__title {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+.category {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .category__title {
@@ -419,6 +461,12 @@ ol > .how-it-works {
   margin-left: 10px;
   padding-bottom: 5px;
   position: relative;
+  right: 140px;
+}
+@media screen and (min-width: 992px) {
+  .category__title {
+    right: 210px;
+  }
 }
 .category__title:before {
   content: "";
@@ -437,10 +485,14 @@ ol > .how-it-works {
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
   text-decoration: none;
   color: #353535;
-  position: relative;
   margin: 10px;
   padding: 10px;
   width: 90%;
+}
+@media screen and (min-width: 992px) {
+  .item {
+    width: 500px;
+  }
 }
 .item__title {
   font-weight: 600;
@@ -453,6 +505,21 @@ ol > .how-it-works {
   position: absolute;
   right: 40px;
   top: 30px;
+}
+
+.selection__mark {
+  color: #99E2D0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 0.5rem;
+  height: 0.5rem;
+  padding: 0.5rem;
+  border-radius: 50%;
 }
 
 /*# sourceMappingURL=pages.css.map */
