--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,6 +8,7 @@ footer {
 
 footer h2 {
     font-family: "Shrikhand", serif;
+    font-size: 20px;
     margin-left: 40px;
     line-height: 15px;
     padding-top: 15px;
@@ -44,4 +45,10 @@ footer li {
         gap: 10px;
         padding-right: 20px;
     }
+}
+
+.kitchen-icon{
+    height: 16px;
+    width: 10px;
+    padding-right: 5px;
 }
