--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -15,6 +15,10 @@
     font-size: 24px;
     border-width: 1px;
 
+    @include desktop-only {
+        right: 300px;
+    }
+
     &__empty {
         position: absolute;
         left: 0;
@@ -31,12 +35,27 @@
         -webkit-background-clip: text;
         color: transparent;
         opacity: 0;
-        transition: opacity 500ms cubic-bezier(.17,.67,.83,.67);
+        transition: opacity 500ms cubic-bezier(.17, .67, .83, .67);
 
         &:hover {
             opacity: 1;
         }
     }
+}
+
+.menu-and-blank {
+    @include desktop-only {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+    }
+}
+
+.menu__image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    inset: 4px 8px;
 }
 
 .menu {
@@ -47,16 +66,27 @@
     flex-direction: column;
     padding: 10px;
 
-    &__image {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        inset: 4px 8px;
+    @include desktop-only {
+        width: 70%;
+        display: flex;
+        justify-content: center;
     }
 
     &__title {
         font-family: "Shrikhand", serif;
+
+        @include desktop-only {
+            display: flex;
+            justify-content: center;
+        }
     }
+}
+
+.category {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .category__title {
@@ -65,6 +95,11 @@
     margin-left: 10px;
     padding-bottom: 5px;
     position: relative;
+    right: 140px;
+
+    @include desktop-only {
+        right: 210px;
+    }
 
     &:before {
         content: "";
@@ -84,10 +119,14 @@
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
     text-decoration: none;
     color: #353535;
-    position: relative;
+    // position: relative;
     margin: 10px;
     padding: 10px;
     width: 90%;
+
+    @include desktop-only {
+        width: 500px;
+    }
 
     &__title {
         font-weight: 600;
@@ -102,5 +141,28 @@
         position: absolute;
         right: 40px;
         top: 30px;
+    }
+}
+
+.selection {
+    // background-color: $third-color;
+    // border-top-left-radius: 30px;
+    // border-top-right-radius: 30px;
+    // display: flex;
+    // flex-direction: row;
+
+    &__mark {
+        color: $third-color;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: white;
+        position: absolute;
+        right: 15px;
+        top: 15px;
+        width: 0.5rem;
+        height: 0.5rem;
+        padding: 0.5rem;
+        border-radius: 50%;
     }
 }
