--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,21 @@
+@keyframes transitionIn {
+  0% {
+    transform: scaleY(0);
+    opacity: 0.1;
+  }
+  17% {
+    transform: scaleY(0.18);
+  }
+  24% {
+    transform: scaleY(0.4);
+  }
+  46% {
+    transform: scaleY(0.81);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
 body {
   margin: 0;
 }
@@ -448,11 +466,23 @@ ol > .how-it-works {
   }
 }
 
-.category {
+.starters, .mains, .desserts {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.starters {
+  animation: transitionIn 100ms;
+}
+
+.mains {
+  animation: transitionIn 600ms;
+}
+
+.desserts {
+  animation: transitionIn 1400ms;
 }
 
 .category__title {
