--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -8,11 +8,22 @@
     }
     24% {
         transform: scaleY(.4);
+        animation-timing-function: cubic-bezier(.9,0,.1,1);
     }
     46% {
         transform: scaleY(.81);
+        animation-timing-function: cubic-bezier(.25,0.25,1);
     }
     100% {
         transform: scaleY(1);
     }
+}
+
+@keyframes clickSelect {
+    0% {
+        width: 0;
+      }
+      100% {
+       width: 100%;
+      }
 }
