--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -5,6 +5,7 @@
     font-size: 20px;
 }
 
+
 .heading{
     display: flex;
     justify-content: space-between;
@@ -13,8 +14,6 @@
 
 .heart-heading {
     position: relative;
-    // width: 60px;
-    // height: 20px;
     font-size: 26px;
     border-width: 1px;
 
@@ -94,15 +93,15 @@
     align-items: center;
 }
 
-.category:nth-child(1){
+.category:nth-child(2){
     animation: transitionIn 500ms 100ms;
 }
 
-.category:nth-child(2) {
+.category:nth-child(3) {
     animation: transitionIn 1500ms 200ms;
 }
 
-.category:nth-child(3) {
+.category:nth-child(4) {
     animation: transitionIn 2000ms 300ms;
 }
 
@@ -137,21 +136,23 @@
     text-decoration: none;
     color: #353535;
     margin: 10px;
-    padding: 10px;
+    // padding: 10px;
+    position: relative;
     width: 90%;
-    height: 40px;
-    display: flex;
+    height: 70px;
     flex-wrap: wrap;
     justify-content: start;
+    overflow: hidden;
 
     @include desktop-only {
         width: 500px;
-        height: 40px;
+        // height: 70px;
     }
 
     &__text{
         display: flex;
         flex-direction: column;
+        padding: 10px;
     }
 
     &__title {
@@ -169,6 +170,7 @@
         position: absolute;
         right: 20px;
         top: 30px;
+        padding: 10px;
     }
 
     .selection {
@@ -176,12 +178,16 @@
         border-bottom-right-radius: 15px;
         border-top-right-radius: 15px;
         position: absolute;
-        margin: auto;
-        top: 0;
-        left: 0;
+        margin: 0;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // top: 0;
+        // left: 0;
+        // bottom: 0;
         right: 0;
-        bottom: 0;
-        display: none;
+        opacity: 0;
     
         &__mark {
             color: $third-color;
@@ -189,19 +195,18 @@
             justify-content: center;
             align-items: center;
             background-color: white;
-            position: absolute;
-            right: 15px;
-            top: 15px;
-            width: 0.5rem;
-            height: 0.5rem;
-            padding: 0.5rem;
+            // right: 15px;
+            // top: 15px;
+            width: 25px;
+            height: 25px;
+            // padding: 0.5rem;
             border-radius: 50%;
-            overflow: hidden;
         }
     }    
 }
 
 .item:hover .selection {
-    animation: clickSelect 5s linear forwards;
-    display: block;
+    animation: clickSelect 1s forwards;
+    // transform-origin: right;
+    opacity: 1;
 }
