--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,29 +1,44 @@
-@keyframes transitionIn{
+@keyframes transitionIn {
     0% {
         transform: scaleY(0);
         opacity: .1;
     }
+
     17% {
         transform: scaleY(.18);
     }
+
     24% {
         transform: scaleY(.4);
-        animation-timing-function: cubic-bezier(.9,0,.1,1);
+        animation-timing-function: cubic-bezier(.9, 0, .1, 1);
     }
+
     46% {
         transform: scaleY(.81);
-        animation-timing-function: cubic-bezier(.25,0.25,1);
+        animation-timing-function: cubic-bezier(0.9, 0, 0.1, 1);
     }
+
     100% {
         transform: scaleY(1);
     }
 }
 
 @keyframes clickSelect {
-    0% {
+    from {
         width: 0;
-      }
-      100% {
-       width: 100%;
-      }
+    }
+
+    to {
+        width: 60px;
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0turn);
+    }
+
+    to {
+        transform: rotate(1turn);
+    }
 }
