--- a/public/styles/pages.css
+++ b/public/styles/pages.css
@@ -509,6 +509,11 @@ ol > .how-it-works {
   }
 }
 
+.courses {
+  display: flex;
+  flex-direction: column;
+}
+
 .category {
   display: flex;
   flex-direction: column;
@@ -516,15 +521,15 @@ ol > .how-it-works {
   align-items: center;
 }
 
-.category:nth-child(2) {
+.category:nth-child(1) {
   animation: transitionIn 500ms 100ms;
 }
 
-.category:nth-child(3) {
+.category:nth-child(2) {
   animation: transitionIn 1500ms 200ms;
 }
 
-.category:nth-child(4) {
+.category:nth-child(3) {
   animation: transitionIn 2000ms 300ms;
 }
 
@@ -615,9 +620,18 @@ ol > .how-it-works {
   border-radius: 50%;
 }
 
+.item__price:hover {
+  right: -60px;
+}
+
 .item:hover .selection {
   animation: clickSelect 1s forwards;
   opacity: 1;
+}
+
+.order {
+  display: flex;
+  justify-content: center;
 }
 
 /*# sourceMappingURL=pages.css.map */
