--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -6,7 +6,7 @@
 }
 
 
-.heading{
+.heading {
     display: flex;
     justify-content: space-between;
     width: 200px;
@@ -86,6 +86,11 @@
     }
 }
 
+.courses {
+    display: flex;
+    flex-direction: column;
+}
+
 .category {
     display: flex;
     flex-direction: column;
@@ -93,15 +98,15 @@
     align-items: center;
 }
 
-.category:nth-child(2){
+.category:nth-child(1){
     animation: transitionIn 500ms 100ms;
 }
 
-.category:nth-child(3) {
+.category:nth-child(2) {
     animation: transitionIn 1500ms 200ms;
 }
 
-.category:nth-child(4) {
+.category:nth-child(3) {
     animation: transitionIn 2000ms 300ms;
 }
 
@@ -136,7 +141,6 @@
     text-decoration: none;
     color: #353535;
     margin: 10px;
-    // padding: 10px;
     position: relative;
     width: 90%;
     height: 70px;
@@ -146,7 +150,6 @@
 
     @include desktop-only {
         width: 500px;
-        // height: 70px;
     }
 
     &__text{
@@ -183,9 +186,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        // top: 0;
-        // left: 0;
-        // bottom: 0;
         right: 0;
         opacity: 0;
     
@@ -195,18 +195,23 @@
             justify-content: center;
             align-items: center;
             background-color: white;
-            // right: 15px;
-            // top: 15px;
             width: 25px;
             height: 25px;
-            // padding: 0.5rem;
             border-radius: 50%;
         }
     }    
 }
 
+.item__price:hover {
+    right: -60px;
+}
+
 .item:hover .selection {
     animation: clickSelect 1s forwards;
-    // transform-origin: right;
     opacity: 1;
+}
+
+.order {
+    display: flex;
+    justify-content: center;
 }
