--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -44,11 +44,21 @@
 }
 
 @keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes hidden {
     from {
-        transform: rotate(0turn);
+        opacity: 1;
     }
 
     to {
-        transform: rotate(1turn);
+        opacity: 0;
     }
 }
