--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -37,17 +37,34 @@
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+    visibility: visible;
   }
   100% {
     transform: rotate(360deg);
+    visibility: hidden;
   }
 }
 @keyframes hidden {
   from {
     opacity: 1;
+    display: block;
   }
   to {
     opacity: 0;
+    z-index: -100;
+    display: none;
+    height: 0;
+    width: 0;
+    display: none;
+    clip-path: circle(0);
+  }
+}
+@keyframes myspinner {
+  from {
+    overflow: hidden;
+  }
+  to {
+    overflow: visible;
   }
 }
 body {
@@ -62,8 +79,13 @@ body {
 .explore-button {
   padding: 15px 25px;
   border-radius: 70px;
+  width: 220px;
   border-style: none;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
   background-image: linear-gradient(#FF79DA, #9356DC);
   color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
@@ -109,10 +131,15 @@ footer {
   flex-direction: column;
   justify-content: space-between;
 }
+@media screen and (min-width: 992px) {
+  footer {
+    padding-left: 200px;
+  }
+}
 
 footer h2 {
   font-family: "Shrikhand", serif;
-  font-size: 20px;
+  font-size: 22px;
   margin-left: 40px;
   line-height: 15px;
   padding-top: 15px;
@@ -139,42 +166,75 @@ footer ul {
   }
 }
 
-footer li {
+.footer-list {
   display: flex;
   flex-direction: row;
   align-items: center;
-  line-height: 4px;
   gap: 10px;
   margin: 0;
+  padding: 3px;
 }
 @media screen and (min-width: 992px) {
-  footer li {
-    gap: 10px;
-    padding-right: 20px;
+  .footer-list {
+    gap: 20px;
+    margin-right: 70px;
+    line-height: 4px;
   }
 }
 
-.kitchen-icon {
-  height: 16px;
-  width: 10px;
-  padding-right: 5px;
+.footer-list p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 7px;
 }
 
-footer a {
+.footer-list a {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 3px;
   text-decoration: none;
   color: white;
 }
 
+.kitchen-icon {
+  font-size: small;
+  padding-right: 5px;
+}
+@media screen and (min-width: 992px) {
+  .kitchen-icon {
+    height: 6px;
+    line-height: 4px;
+    padding-right: 10px;
+  }
+}
+
+.body {
+  animation: myspinner;
+  animation-duration: 3s;
+}
+
 .spinner-container {
+  background-color: #F6F6F6;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  z-index: 1000;
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+  animation: hidden 0s 3s forwards;
 }
 
 .spinner {
-  border: 16px dashed #F6F6F6;
-  border-top: 16px dashed #9356DC;
+  border: 16px dashed #99E2D0;
+  border-top: 16px dashed green;
   border-radius: 50%;
   width: 300px;
   height: 300px;
@@ -198,10 +258,10 @@ footer a {
 }
 
 .dot {
-  color: #353535;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #353535;
   width: 4%;
   height: 50px;
 }
@@ -214,15 +274,21 @@ h1 {
 .explore {
   background-color: #F6F6F6;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
   border-style: none;
   padding: 10px 0px 30px 0px;
 }
 .explore__title {
-  font-size: 26px;
+  font-size: 24px;
   font-weight: 500;
+}
+@media screen and (min-width: 992px) {
+  .explore__title {
+    font-size: 42px;
+    font-weight: 500;
+  }
 }
 .explore__text {
   font-size: 20px;
@@ -237,10 +303,11 @@ h1 {
 .how-it-works__title {
   display: flex;
   flex-direction: column;
+  font-size: 28px;
 }
 @media screen and (min-width: 992px) {
   .how-it-works__title {
-    margin-left: 100px;
+    margin-left: 290px;
   }
 }
 
@@ -248,7 +315,7 @@ ol {
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin-left: 15px;
+  margin-left: 30px;
 }
 @media screen and (min-width: 992px) {
   ol {
@@ -266,11 +333,20 @@ ol > li {
   align-items: center;
   background-color: #F2F2F2;
   padding: 10px 30px;
-  gap: 30px;
-  width: 250px;
+  gap: 40px;
+  width: 260px;
   height: 60px;
   margin-top: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+@media screen and (min-width: 992px) {
+  ol > li {
+    width: 340px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .icon {
@@ -289,14 +365,18 @@ ol > li {
   background-color: #9356DC;
   position: absolute;
   left: -15px;
-  width: 0.5rem;
-  height: 0.5rem;
-  padding: 0.5rem;
+  width: 0.7rem;
+  height: 0.7rem;
+  padding: 0.7rem;
   border-radius: 50%;
 }
 
 .icon-color {
   color: #9356DC;
+}
+
+.fa-solid {
+  font-size: 24px;
 }
 
 ol > .how-it-works {
@@ -305,6 +385,16 @@ ol > .how-it-works {
   color: #F6F6F6;
   background-color: #9356DC;
   border-radius: 30%;
+}
+
+li p {
+  font-size: 18px;
+  font-weight: 500;
+}
+@media screen and (min-width: 992px) {
+  li p {
+    font-size: 20px;
+  }
 }
 
 /* RESTAURANT CARDS */
@@ -319,12 +409,17 @@ ol > .how-it-works {
 @media screen and (min-width: 992px) {
   .restaurants {
     box-sizing: border-box;
-    padding-left: 100px;
+    padding: 100px;
   }
 }
-
-.restaurants h2 {
+.restaurants__title {
   margin-left: 20px;
+  font-size: 28px;
+}
+@media screen and (min-width: 992px) {
+  .restaurants__title {
+    margin-left: 200px;
+  }
 }
 
 .cards {
@@ -340,18 +435,19 @@ ol > .how-it-works {
   .cards {
     flex-flow: row wrap;
     justify-content: center;
-    width: 80%;
-    gap: 50px;
+    width: 100%;
+    gap: 60px;
   }
 }
 
 .card {
   display: block;
   padding-top: 0;
+  padding-bottom: 10px;
   background-color: white;
   border-radius: 20px;
   filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  width: 300px;
+  width: 320px;
   height: 225px;
   text-decoration: none;
   color: #353535;
@@ -359,7 +455,8 @@ ol > .how-it-works {
 }
 @media screen and (min-width: 992px) {
   .card {
-    width: 500px;
+    width: 620px;
+    height: 300px;
   }
 }
 .card__image {
@@ -369,23 +466,31 @@ ol > .how-it-works {
   border-top-right-radius: 20px;
   object-fit: cover;
 }
+@media screen and (min-width: 992px) {
+  .card__image {
+    height: 200px;
+  }
+}
 .card__image__body {
   display: flex;
   flex-direction: column;
-  margin: 15px;
+  margin: 20px;
 }
 @media screen and (min-width: 992px) {
   .card__image__body {
     width: fit-content;
+    margin: 15px;
   }
 }
 
 .card__body h3 {
   margin: 10px 15px;
+  font-size: 22px;
 }
 
 .card__body p {
   margin: 0px 10px 15px 15px;
+  font-size: 22px;
   font-weight: 100;
 }
 
@@ -423,8 +528,8 @@ ol > .how-it-works {
 .new {
   position: absolute;
   text-align: center;
-  left: 200px;
-  bottom: 155px;
+  left: 230px;
+  bottom: 165px;
   width: 40px;
   padding: 10px 20px;
   border-style: none;
@@ -434,7 +539,8 @@ ol > .how-it-works {
 }
 @media screen and (min-width: 992px) {
   .new {
-    left: 400px;
+    left: 520px;
+    bottom: 230px;
   }
 }
 
@@ -485,7 +591,7 @@ ol > .how-it-works {
   .menu-and-blank {
     display: flex;
     justify-content: center;
-    justify-items: center;
+    align-items: center;
   }
 }
 
@@ -516,6 +622,8 @@ ol > .how-it-works {
   font-family: "Shrikhand", serif;
   font-size: 26px;
   margin: 0;
+  display: flex;
+  align-items: self-start;
 }
 @media screen and (min-width: 992px) {
   .menu__title {
@@ -580,7 +688,7 @@ ol > .how-it-works {
   color: #353535;
   margin: 10px;
   position: relative;
-  width: 90%;
+  width: 340px;
   height: 70px;
   flex-wrap: wrap;
   justify-content: start;
