--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -4,11 +4,15 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @include desktop-only{
+        padding-left: 200px;
+    }
 }
 
 footer h2 {
     font-family: "Shrikhand", serif;
-    font-size: 20px;
+    font-size: 22px;
     margin-left: 40px;
     line-height: 15px;
     padding-top: 15px;
@@ -33,27 +37,44 @@ footer ul {
     }
 }
 
-footer li {
+.footer-list {
     display: flex;
     flex-direction: row;
     align-items: center;
-    line-height: 4px;
     gap: 10px;
     margin: 0;
+    padding: 3px;
 
     @include desktop-only {
-        gap: 10px;
-        padding-right: 20px;
+        gap: 20px;
+        margin-right: 70px;
+        line-height: 4px;
     }
 }
 
-.kitchen-icon{
-    height: 16px;
-    width: 10px;
-    padding-right: 5px;
+.footer-list p{
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 7px;
 }
 
-footer a {
+.footer-list a {
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 3px;
     text-decoration: none;
     color: white;
+}
+
+.kitchen-icon{
+    font-size: small;
+    padding-right: 5px;
+
+    @include desktop-only {
+        height: 6px;
+        line-height: 4px;
+        padding-right: 10px;
+    }
 }
