--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,23 +1,31 @@
+.body {
+    animation: myspinner;
+    animation-duration: 3s;
+}
+
 .spinner-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    // background-color: #EAEAEA;
+    background-color: $background-color;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    @include flexcenter;
+    z-index: 1000;
+    height: 100%;
+    width: 100%;
+    opacity: 1;
+    animation: hidden 0s 3s forwards;
 }
 
 .spinner {
-    border: 16px dashed $background-color; 
-    border-top: 16px dashed $main-color; 
+    border: 16px dashed $third-color; 
+    border-top: 16px dashed green; 
     border-radius: 50%;
     width: 300px;
     height: 300px;
     animation: spin 3s linear 2;
 }
-
-// #spinner-hidden {
-//     animation: hidden 4s infinite;
-// }
 
 /* LOCATION */
 .location {
@@ -35,10 +43,8 @@
 }
 
 .dot {
+    @include flexcenter;
     color: #353535;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 4%;
     height: 50px;
 }
@@ -50,16 +56,19 @@ h1 {
 
 .explore {
     background-color: $background-color;
-    display: flex;
+    @include flexcenter;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     border-style: none;
     padding: 10px 0px 30px 0px;
 
     &__title {
-        font-size: 26px;
+        font-size: 24px;
         font-weight: 500;
+
+        @include desktop-only{
+            font-size: 42px;
+            font-weight: 500;
+        }
     }
 
     &__text {
@@ -76,9 +85,10 @@ h1 {
     &__title {
         display: flex;
         flex-direction: column;
+        font-size: 28px;
 
         @include desktop-only {
-            margin-left: 100px;
+            margin-left: 290px;
         }
     }
 }
@@ -87,7 +97,7 @@ ol {
     display: flex;
     flex-direction: column;
     padding: 0;
-    margin-left: 15px;
+    margin-left: 30px;
 
     @include desktop-only {
         display: flex;
@@ -106,11 +116,17 @@ ol>li {
     align-items: center;
     background-color: #F2F2F2;
     padding: 10px 30px;
-    gap: 30px;
-    width: 250px;
+    gap: 40px;
+    width: 260px;
     height: 60px;
     margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+
+    @include desktop-only{
+        width: 340px;
+        height: 60px;
+        @include flexcenter;
+    }
 }
 
 .icon {
@@ -123,20 +139,22 @@ ol>li {
 
 .icon-circle {
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexcenter;
     background-color: $main-color;
     position: absolute;
     left: -15px;
-    width: 0.5rem;
-    height: 0.5rem;
-    padding: 0.5rem;
+    width: 0.70rem;
+    height: 0.70rem;
+    padding: 0.70rem;
     border-radius: 50%;
 }
 
 .icon-color {
     color: $main-color;
+}
+
+.fa-solid {
+    font-size: 24px;
 }
 
 ol>.how-it-works {
@@ -145,6 +163,15 @@ ol>.how-it-works {
     color: $background-color;
     background-color: $main-color;
     border-radius: 30%;
+}
+
+li p {
+    font-size: 18px;
+    font-weight: 500;
+
+    @include desktop-only{
+        font-size: 20px;
+    }
 }
 
 /* RESTAURANT CARDS */
@@ -158,12 +185,17 @@ ol>.how-it-works {
 
     @include desktop-only {
         box-sizing: border-box;
-        padding-left: 100px;
+        padding: 100px;
     }
-}
 
-.restaurants h2 {
-    margin-left: 20px;
+    &__title {
+        margin-left: 20px;
+        font-size: 28px;
+    
+        @include desktop-only {
+            margin-left: 200px;
+        }
+    }
 }
 
 .cards {
@@ -178,25 +210,27 @@ ol>.how-it-works {
     @include desktop-only {
         flex-flow: row wrap;
         justify-content: center;
-        width: 80%;
-        gap: 50px;
+        width: 100%;
+        gap: 60px;
     }
 }
 
 .card {
     display: block;
     padding-top: 0;
+    padding-bottom: 10px;
     background-color: white;
     border-radius: 20px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    width: 300px;
+    width: 320px;
     height: 225px;
     text-decoration: none;
     color: #353535;
     position: relative;
 
     @include desktop-only {
-        width: 500px;
+        width: 620px;
+        height: 300px;
     }
 
     &__image {
@@ -206,13 +240,18 @@ ol>.how-it-works {
         border-top-right-radius: 20px;
         object-fit: cover;
 
+        @include desktop-only {
+            height: 200px;
+        }
+
         &__body {
             display: flex;
             flex-direction: column;
-            margin: 15px;
+            margin: 20px;
 
             @include desktop-only {
                 width: fit-content;
+                margin: 15px;
             }
         }
     }
@@ -220,10 +259,12 @@ ol>.how-it-works {
 
 .card__body h3 {
     margin: 10px 15px;
+    font-size: 22px;
 }
 
 .card__body p {
     margin: 0px 10px 15px 15px;
+    font-size: 22px;
     font-weight: 100;
 }
 
@@ -265,8 +306,8 @@ ol>.how-it-works {
 .new {
     position: absolute;
     text-align: center;
-    left: 200px;
-    bottom: 155px;
+    left: 230px;
+    bottom: 165px;
     width: 40px;
     padding: 10px 20px;
     border-style: none;
@@ -275,6 +316,7 @@ ol>.how-it-works {
     color: green;
 
     @include desktop-only {
-        left: 400px;
+        left: 520px;
+        bottom: 230px;
     }
 }
