--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -46,19 +46,37 @@
 @keyframes spin {
     0% {
         transform: rotate(0deg);
+        visibility:visible;
     }
 
     100% {
         transform: rotate(360deg);
+        visibility:hidden;
     }
 }
 
 @keyframes hidden {
     from {
-        opacity: 1;
+        opacity:1;
+        display: block;
     }
 
     to {
-        opacity: 0;
+        opacity:0;
+        z-index:-100;
+        display:none;
+        height:0;
+        width:0;
+        display: none;
+        clip-path:circle(0);
     }
+}
+
+@keyframes myspinner{
+    from{
+        overflow: hidden;
+      }
+      to{
+        overflow: visible;
+      }
 }
